# Hackathon-AI-23-24-05

./: .gitignore  ONBOARDING.md  README.md  checksums.sha256  convert_coco_custom.py  dataset.yaml  download_data.sh  predict.py  pyproject.toml  taxonomy.json  test_images.json  train.py
notebooks/: 01_exploration.ipynb  02_train_colab.ipynb
scripts/scripts/: check_yolo_labels.py
submissions/: predictions(V1.0).json  predictions(V2.0).json  predictions.json
